# Hunt-Showdown-Weapons-Sound-Quiz

./: LICENSE  README.md
Source/: package-lock.json  package.json
Source/src/: index.html  main.css  main.js  quiz_script.js  style.css  test.js
Source/src-tauri/: Cargo.toml  tauri.conf.json
Source/src-tauri/icons/: icon.icns
